--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fontsource/amiri": "^5.2.8",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "mongodb": "^6.20.0",
