--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/amiri": "^5.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@react-three/postprocessing": "^3.0.4",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "mongodb": "^6.20.0",
